Log PaymentResponse.complete() timeout.

Before this patch, if the merchant website never calls
PaymentResponse.complete(), then the UI shows a generic error dialog to
the user and aborts payment, but nothing indicates to the web developer
that it was a timeout that causes the closing of the web payment UI.

The fix is to add a console error message "Timed out waiting for a
PaymentResponse.complete() call" when the timer expires.

After this patch, the console error message will indicate to the web
developer that it was a timeout that causes the closing of the web
payment UI.

To test manually:
1) Open https://rsolomakhin.github.io/pr/ko/complete/.
2) Click [Buy] on the page.
3) Click [Pay] in the web payment UI.
Observe: Console prints an error message after 60 seconds.

BUG=711027

Review-Url: https://codereview.chromium.org/2827963002
Cr-Commit-Position: refs/heads/master@{#465694}